Update package name and license

--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "caxa",
-  "version": "3.0.1",
+  "name": "@chainsafe/caxa",
+  "version": "1.0.0",
   "description": "Package Node.js applications into executable binaries",
   "keywords": [
     "packing",
     "deployment",
     "binary"
   ],
-  "homepage": "https://github.com/leafac/caxa",
-  "repository": "https://github.com/leafac/caxa",
-  "bugs": "https://github.com/leafac/caxa/issues",
-  "funding": [
-    "https://patreon.com/leafac",
-    "https://paypal.me/LeandroFacchinettiEU",
-    "https://github.com/sponsors/leafac",
-    "https://btc.com/34KJBgtaFYMtDqpSgMayw9qiKWg2GQXA9M"
-  ],
-  "author": "Leandro Facchinetti <caxa@leafac.com> (https://leafac.com)",
+  "homepage": "https://github.com/ChainSafe/caxa",
+  "repository": "https://github.com/ChainSafe/caxa",
+  "bugs": "https://github.com/ChainSafe/caxa/issues",
+  "author": "ChainSafe Systems",
   "license": "MIT",
   "exports": "./build/index.mjs",
   "types": "./build/index.d.mts",
