--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,6 @@ jobs:
         with:
           node-version: latest
           registry-url: https://registry.npmjs.org/
-      - run: npm ci && npm publish
+      - run: npm ci && npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
