--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@main
       - uses: actions/setup-node@main
         with:
-          node-version: latest
+          node-version: 22
       - run: npm install-ci-test
 
   npm-publish:
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@main
       - uses: actions/setup-node@main
         with:
-          node-version: latest
+          node-version: 22
           registry-url: https://registry.npmjs.org/
       - run: npm ci && npm publish --access public
         env:
