--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,16 @@
 on: push
 jobs:
-  # test:
-  #   strategy:
-  #     matrix:
-  #       os: [ubuntu]
-  #   runs-on: ${{ matrix.os }}-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 22
-  #     - run: npm install-ci-test
+  test:
+    strategy:
+      matrix:
+        os: [windows, macos, ubuntu]
+    runs-on: ${{ matrix.os }}-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: npm install-ci-test
 
   npm-publish:
     if: startsWith(github.ref, 'refs/tags/v')
